fix(a11y): correct contrast issues detected by WAVE

--- a/assets/style.css
+++ b/assets/style.css
@@ -107,7 +107,7 @@ header .name {
 	justify-content: center;
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #fff;
+	color: #000;
 	background-color: #BEB45A;
 	border-radius:0 ;
 }
@@ -260,6 +260,10 @@ form textarea {
 input[type="submit"] {
 	background-color: #BEB45A;
 	padding: .5em 1em
+}
+
+.visually-hidden {
+	color: #000;
 }
 
 @media all and (max-width: 1180px) {
